Changed for Docker architectures

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,4 +17,4 @@ jobs:
       - run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       - run: |
-          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 -t ytaki0801/plsh .
+          docker buildx build --push --platform linux/386,linux/amd64,linux/arm/v5,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/mips64le,linux/ppc64le,linux/s390x -t ytaki0801/plsh .
